# mint-ensemble-manager/swagger.json
@@ -2747,53 +2747,9 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "type": "object",
-                  "properties": {
-                    "tasks": {
-                      "type": "array",
-                      "items": {
-                        "type": "object",
-                        "properties": {
-                          "id": {
-                            "type": "string"
-                          },
-                          "name": {
-                            "type": "string"
-                          },
-                          "problem_statement_id": {
-                            "type": "string"
-                          },
-                          "dates": {
-                            "type": "object",
-                            "properties": {
-                              "start_date": {
-                                "type": "string",
-                                "format": "date-time"
-                              },
-                              "end_date": {
-                                "type": "string",
-                                "format": "date-time"
-                              }
-                            }
-                          },
-                          "response_variables": {
-                            "type": "array",
-                            "items": {
-                              "type": "string"
-                            }
-                          },
-                          "driving_variables": {
-                            "type": "array",
-                            "items": {
-                              "type": "string"
-                            }
-                          },
-                          "regionid": {
-                            "type": "string"
-                          }
-                        }
-                      }
-                    }
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/Task"
                   }
                 }
               }
